038 ==> 325458 - Editing Exif information corrupts MPO 3D image with Exiv2 - Use ExifTool instead.
039 ==> 448729 - Metadata is not written back to file when size of XMP JPEG segment is larger than 65535 bytes - Use ExifTool instead Exiv2.
040 ==> 451466 - XMP with Google depth-map gets corrupted when metadata is modified in digiKam (likely exiv2 issue) - Use ExifTool instead.
041 ==> 431113 - Apply templates to video files, not only to JPEGs, with ExifTool.
042 ==> 441758 - Editing metadata on HEIC image and HEVC video files doesn't work (greyed out).
043 ==> 440547 - The writing of metadata in HEIC files is not possible - Use ExifTool instead.
044 ==> 434246 - XMP metadata fails to write to file with Exiv2 - Use ExifTool instead.
045 ==> 225272 - digiKam destroy some Exif data with Exiv2 - Use ExifTool instead.
046 ==> 174108 - digiKam and exiv2 crash with AVI file - Use ExifTool instead.
047 ==> 342030 - digiKam crashes when checking an AVI video file using exiv2 - Use ExifTool instead.
048 ==> 171989 - Can't set gps photo location on .nef images with Exiv2 - Use ExifTool instead.
049 ==> 173828 - Geolocation do not except Canon EOS 1D Mark III CR2-files with Exiv2 - Use ExifTool instead.
050 ==> 447371 - Date of videos seems incorrect.
051 ==> 453180 - "not valid" dates for video in "Adjust Time & Date".
052 ==> 453992 - Build error in digiKam Setup.
053 ==> 453630 - Metadata doesn 't always keep it's hierarchy when written with exiftool.
054 ==> 426951 - digiKam audio issue.
055 ==> 454318 - Save as Version in Imageeditor not accessible when using external raw editor (rawtherapee).
056 ==> 324967 - Add support of specific increase numbering offset with advance rename tool.
057 ==> 453275 - Renaming files is not folder aware, even with folder aware option.
058 ==> 454656 - When locales not set, crash occurs when opening "Settings -> Configure digiKam".
059 ==> 435377 - Speed up image preview.
060 ==> 